# dev-tools

./: .gitignore  .md-link-config.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-search-and-replace.yaml  .yamlfmt  .yamllint  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: requirements.txt
.github/workflows/: check.yaml  release.yml
dev_tools/: check_jira_reference_in_todo.py  check_number_of_lines_count.py  check_ownership.py  check_shellscript_set_options.py  check_useless_exclude_paths_hooks.py  configure_vscode_for_bazel.py  find_owner.py  generate_hook_docs.py  git_hook_utils.py  ownership_utils.py  pre_commit_utils.py  print_pre_commit_metrics.py  sync_vscode_config.py
dev_tools/local/: generate_hook_docs.py
tests/: __init__.py  test_check_build_file_extensions.py  test_check_jira_reference_in_todo.py  test_check_number_of_lines_count.py  test_check_ownership.py  test_check_shellscript_set_options.py  test_check_useless_exclude_paths_hooks.py  test_configure_vscode_for_bazel.py  test_find_owner.py  test_generate_hook_docs.py  test_ownership_utils.py  test_sync_vscode_config.py
tests/local/: test_check_cpp_tests_pattern.py  test_generate_hook_docs.py
